--- a/react_study/miniblog/package.json
+++ b/react_study/miniblog/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "hookex",
+  "name": "miniblog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "add": "^2.0.6",
-    "or": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "yarn": "^1.22.19"
+    "styled-components": "^5.3.8",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
